--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <header class="header">
         <nav class="navbar navbar-expand-lg">
-          <div class="container">
+          <div class="container-fluid">
             <a class="navbar-brand d-lg-none d-md-block" href="#">
               <img src="./image/Logo.svg" alt="logo" />
             </a>
@@ -70,9 +70,10 @@
       </header>
       <main class="main">
         <section class="about">
-          <div class="custom-container h-100">
+          <div class="container h-100">
             <div class="row h-100">
-              <div class="col-7 d-flex justify-content-evenly  flex-column align-items-start">
+              <div
+                class="col-12 col-sm-12 col-md-12 col-lg-7 d-flex align-items-center align-items-sm-center align-items-md-center align-items-lg-start justify-content-center justify-content-sm-center justify-content-md-center justify-content-lg-evenly flex-column flex-lg-column">
                 <h1>Enjoy Your Morning Coffee.</h1>
                 <p>
                   The coofee is brewed by fist roasting the green coffee beans over hot coals in
@@ -80,41 +81,98 @@
                 </p>
                 <button>Test Coffee</button>
               </div>
-              <div class="play-btn col-5 d-flex align-items-end justify-content-end">
-                <img src="./image/Play.svg" alt="">
+              <div
+                class="play-btn col-12 col-sm-12 col-md-12 col-lg-5 d-flex align-items-center align-items-sm-center align-items-md-center align-items-lg-end justify-content-center justify-content-sm-center justify-content-md-center justify-content-lg-end">
+                <img src="./image/Play.svg" alt="" />
               </div>
             </div>
           </div>
         </section>
         <section class="flavour py-5 my-5">
-          <div class="custom-container">
-            <div class="flavour-cards row">
-              <div class="col">
+          <div class="container">
+            <div
+              class="flavour-cards row d-flex justify-content-center justify-content-sm-center justify-content-md-between">
+              <div class="col-12 col-md px-0">
                 <h4>
-                  <span>01</span> 
+                  <span>01</span>
                   Best Coffee Flavour
                 </h4>
-                <img class="w-100" src="./image/flavourImage.png" alt="">
+                <img class="w-100" src="./image/flavourImage.png" alt="" />
               </div>
-              <div class="col">
+              <div
+                style="margin: 0 32px"
+                class="px-0 col-12 col-md mt-4 mt-sm-4 mb-4 mb-sm-4 mt-md-0 mb-md-0">
                 <h4>
-                  <span>01</span> 
+                  <span>01</span>
                   Best Coffee Flavour
                 </h4>
-                <img class="w-100" src="./image/flavourImage.png" alt="">
+                <img class="w-100" src="./image/flavourImage.png" alt="" />
               </div>
-              <div class="col">
+              <div class="px-0 col-12 col-md">
                 <h4>
-                  <span>01</span> 
+                  <span>01</span>
                   Best Coffee Flavour
                 </h4>
-                <img class="w-100" src="./image/flavourImage.png" alt="">
+                <img class="w-100" src="./image/flavourImage.png" alt="" />
               </div>
             </div>
           </div>
         </section>
-        <section>
-          
+        <section class="ourHistory my-5 py-5">
+          <div class="container">
+            <div class="row">
+              <div class="history px-0">
+                <img class="w-100" src="./image/Rectangle 13.png" alt="" />
+                <img class="w-100" src="./image/h-img.png" alt="" style="margin-top: 32px" />
+              </div>
+              <div class="history px-0" style="margin: 0 32px">
+                <img class="w-100 h-100" src="./image/Rectangle 14.png" alt="" />
+              </div>
+              <div class="history-desc col-6 px-0">
+                <div>
+                  <h3>Our history</h3>
+                  <h2>Create a new story with us</h2>
+                  <p>
+                    mauris rhoncus in imperdiet placerat. vestibu emismd nisl suscirpit ligula
+                    volutpat, a feyguat urn maxmaus. cars massa nibhtincidunt. donec et nibh
+                    maximus, est eu, mattis nuce. preasent ut quam quis quam venen atis fringilla.
+                    morbi vastibulum id tells mmodo mattis. aliauam erat volutpal.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="popilar">
+          <div class="container">
+            <h3>Popular Product</h3>
+            <h2>Coffee popular Product</h2>
+            <div class="row">
+              <div class="col"></div>
+              <div class="col"></div>
+              <div class="col"></div>
+            </div>
+            <a href="">View all product</a>
+          </div>
+        </section>
+        <section class="machine">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <img src="" alt="" />
+              </div>
+              <div class="col">
+                <h2>Coffee machine, buy for home</h2>
+                <p>
+                  mauris rhoncus in imperdiet placerat. vestibu emismd nisl suscirpit ligula
+                  volutpat, a feyguat urn maxmaus. cars massa nibhtincidunt. donec et nib maximus,
+                  est eu, mattis nuce. preasent ut quam quis quam venen atis fri ngilla. morbi
+                  vastibulum id tells mmodo mattis. aliauam erat volutpal.
+                </p>
+                <a href="">Discover now</a>
+              </div>
+            </div>
+          </div>
         </section>
       </main>
     </div>
