add 3 block popular machine menu

--- a/index.html
+++ b/index.html
@@ -143,40 +143,128 @@
             </div>
           </div>
         </section>
-        <section class="popilar">
-          <div class="container">
+        <section class="popular my-5">
+          <div class="container d-flex flex-column align-items-center px-0">
             <h3>Popular Product</h3>
             <h2>Coffee popular Product</h2>
-            <div class="row">
-              <div class="col"></div>
-              <div class="col"></div>
-              <div class="col"></div>
+            <div class="popular__cards row py-5 px-0 w-100 d-flex justify-content-between">
+              <div class="col-3 px-0 d-flex flex-column align-items-center">
+                <img src="./image/popular-card.svg" alt="" />
+                <p>brazil coffee gred</p>
+                <button>
+                  <img src="./image/shopping-bag.svg" alt="" />
+                  Add to cart
+                </button>
+              </div>
+              <div class="col-3 px-0 d-flex flex-column align-items-center">
+                <img src="./image/popular-card.svg" alt="" />
+                <img src="./image/popular-stars.svg" alt="" style="margin: 37px 0 20px 0" />
+                <p>brazil coffee gred</p>
+                <span>Price - $320.00/ $358</span>
+              </div>
+              <div class="col-3 px-0 d-flex flex-column align-items-center">
+                <img src="./image/popular-card.svg" alt="" />
+                <img src="./image/popular-stars.svg" alt="" style="margin: 37px 0 20px 0" />
+                <p>brazil coffee gred</p>
+                <span>Price - $320.00/ $358</span>
+              </div>
             </div>
-            <a href="">View all product</a>
+            <a class="d-flex align-items-center justify-content-center" href="">View all product</a>
           </div>
         </section>
-        <section class="machine">
+        <section class="machine my-5">
           <div class="container">
             <div class="row">
               <div class="col">
-                <img src="" alt="" />
+                <img class="machine__coffee" src="./image/coffee-machine.svg" alt="" />
               </div>
-              <div class="col">
-                <h2>Coffee machine, buy for home</h2>
+              <div
+                class="machine__description col d-flex flex-column align-items-start justify-content-evenly">
+                <h2>
+                  Coffee <br />
+                  machine, buy for home
+                </h2>
                 <p>
                   mauris rhoncus in imperdiet placerat. vestibu emismd nisl suscirpit ligula
                   volutpat, a feyguat urn maxmaus. cars massa nibhtincidunt. donec et nib maximus,
                   est eu, mattis nuce. preasent ut quam quis quam venen atis fri ngilla. morbi
                   vastibulum id tells mmodo mattis. aliauam erat volutpal.
                 </p>
-                <a href="">Discover now</a>
+                <a class="d-flex align-items-center justify-content-center" href="">Discover now</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="menu my-5">
+          <div class="container d-flex flex-column align-items-center px-0">
+            <h3>Menu</h3>
+            <h2 style="margin: 12px 0 56px;">Coffee popular menu</h2>
+            <div class="menu__cards row w-100 px-0">
+              <div class="col-6">
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <img src="./image/menu-img.svg" alt="" />
+                    <h4>Americano rosted gred</h4>
+                  </div>
+                  <span>$12:00</span>
+                </div>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <img src="./image/menu-img.svg" alt="" />
+                    <h4>Americano rosted gred</h4>
+                  </div>
+                  <span>$12:00</span>
+                </div>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <img src="./image/menu-img.svg" alt="" />
+                    <h4>Americano rosted gred</h4>
+                  </div>
+                  <span>$12:00</span>
+                </div>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <img src="./image/menu-img.svg" alt="" />
+                    <h4>Americano rosted gred</h4>
+                  </div>
+                  <span>$12:00</span>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <img src="./image/menu-img.svg" alt="" />
+                    <h4>Americano rosted gred</h4>
+                  </div>
+                  <span>$12:00</span>
+                </div>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <img src="./image/menu-img.svg" alt="" />
+                    <h4>Americano rosted gred</h4>
+                  </div>
+                  <span>$12:00</span>
+                </div>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <img src="./image/menu-img.svg" alt="" />
+                    <h4>Americano rosted gred</h4>
+                  </div>
+                  <span>$12:00</span>
+                </div>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <img src="./image/menu-img.svg" alt="" />
+                    <h4>Americano rosted gred</h4>
+                  </div>
+                  <span>$12:00</span>
+                </div>
               </div>
             </div>
           </div>
         </section>
       </main>
     </div>
-
     <script src="./bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
   </body>
 </html>
